nullpointer, arrayoutofbound & IOException